Chapter06/frontend/kubernetes/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: frontend-ingress
    namespace: example
spec:
    ingressClassName: nginx
    rules:
        - host: frontend.example.local
          http:
            paths:
              - backend:
                  service:
                    name: frontend-service
                    port:
                      number: 80
                path: /
                pathType: Prefix
